Inequations, amendments to calculator

--- a/game.html
+++ b/game.html
@@ -143,6 +143,9 @@ HEADER
                             </li>
                             <li><a href="#zmien_system">ccc</a>
                             </li>
+                             <li><a href="kalkulator.html">Kalkulator</a>
+                            </li>
+
 
 
                             </ul>
