--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ HEADER
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="#home">
-                                <img src="images/logo2.svg" alt="Powrót na stronę główną.">
+                                <img src="images/logo2.png" alt="Powrót na stronę główną.">
                             </a>
 
                         </div>
@@ -210,10 +210,7 @@ HEADER
                                 <li><a href="kalkulator.html">kalkulator</a>
                                 </li>
                                 <li>
-                                    <a href="game.html">zagraj</a>
-                                </li>
-                                <li>
-                                    <a href="info.html"o stronie</a>
+                                    <a href="info.html">o stronie</a>
                                 </li>
                             </ul>
                         </div>
@@ -229,7 +226,7 @@ HEADER
                     <div class="only-logo">
                         <div class="navbar">
                             <div class="navbar-header">
-                                <img src="images/logo.svg" class="logo" alt="logo">
+                                <img src="images/logo.png" class="logo" alt="logo">
                             </div>
                         </div>
                     </div>
@@ -600,7 +597,7 @@ AUTOR SECTION
                 </div>
 
                 <p class="def">
-                    Brytyjski matematyk. W wieku 14 lat został asystentem nauczyciela w szkole w Bristolu. W 1809 założył własną szkołę w Bath. Przypisuje się mu opracowanie algorytmu nazywanego dziś schematem Hornera pozwalającego łatwo obliczać wartość wielomianu, który znany był Chińczykom pięćset lat wcześniej. W 1834 opatentował  <span class="trigger mark" data-container="body" data-toggle="popover" data-html="true" data-placement="bottom" title="Zoetrop" data-content="<img src='images/zoetrop.jpg'></br>Zoetrop - urządzenie, wykorzystujące efekt stroboskopowy.  Wewnątrz cylindra z naciętymi szczelinami zawarte są kolejne etapy ruchu (przedmiotu lub stworzenia). Po wprawieniu cylindra w ruch widok sprawia wrażenie ruchomej scenki.">zoetrop.</span>
+                    Brytyjski matematyk. W wieku 14 lat został asystentem nauczyciela w szkole w Bristolu. W 1809 założył własną szkołę w Bath. Przypisuje się mu opracowanie algorytmu nazywanego dziś schematem Hornera pozwalającego łatwo obliczać wartość wielomianu, który znany był Chińczykom pięćset lat wcześniej. W 1834 opatentował  <span class="trigger mark" data-container="body" data-toggle="popover" data-html="true" data-placement="right" title="Zoetrop" data-content="<img src='images/zoetrop.jpg'></br>Zoetrop - urządzenie, wykorzystujące efekt stroboskopowy.  Wewnątrz cylindra z naciętymi szczelinami zawarte są kolejne etapy ruchu (przedmiotu lub stworzenia). Po wprawieniu cylindra w ruch widok sprawia wrażenie ruchomej scenki.">zoetrop.</span>
                 </p>
             </div>
             <!-- /ENDBRIEF -->
@@ -639,7 +636,19 @@ DIVISION THEOREM
                     <h3 class="green-text"></br>Pierwiastek wielomianu</h3>
 
                 <p>
-                    Pierwiastkiem wielomianu <span class="math_marks">W(x)</span>nazywamy liczbę rzeczywistą a, dla której <span class="math_marks">W(a)=0.</span></p>
+                    Pierwiastkiem wielomianu <span class="math_marks">W(x)</span> nazywamy liczbę rzeczywistą a, dla której <span class="math_marks">W(a)=0.</span></p>
+            </div>
+
+            <div class="colored-line-left margin-top yellow">
+            </div>
+        </div>
+          <hr class="yellow margin-top">
+            <div class="definition_bg">
+                <div class="definition_text">
+                    <h3 class="green-text"></br>Twierdzenie o liczbie pierwiastków wielomianu</h3>
+
+                <p>
+                    Liczba pierwiastków niezerowego wielomianu <span class="math_marks">W(x)</span> jednej zmiennej rzeczywistej jest nie większe niż stopień wielomianu <span class="math_marks">W(x).</span></p>
             </div>
 
             <div class="colored-line-left margin-top yellow">
@@ -652,7 +661,7 @@ DIVISION THEOREM
 
             <p>
                 Wielomian <span class="math_marks">W(x)</span> jest podzielny przez wielomian <span class="math_marks">P(x)</span> (który jest różny od <span class="trigger mark" data-container="body" data-toggle="popover" data-html="true" data-placement="bottom" data-content="Wielomian zerowy - wielomian, który dla danego argumentu x przyjmuje wartość 0.</br>
-                    W(x)=0" title="Wielomian zerowy">wielomianu zerowego</span>) wtedy i tylko wtedy, gdy istnieje taki wielomian <span class="math_marks">Q(x)</span>, że:</br><span class="math_marks">W(x)=P(x)&bull;Q(x).</br></span> Wówczas wielomian <span class="math_marks">Q(x) </span>nazywamy ilorazem wielomianu <span class="math_marks">W(x)</span> przez <span class="math_marks">P(x)</span>. </br>Wielomian <span class="math_marks">P(x)</span> jest dzielnikiem wielomianu <span class="math_marks">W(x)</span>. </p>
+                    W(x)=0" title="Wielomian zerowy">wielomianu zerowego</span>) wtedy i tylko wtedy, gdy istnieje taki wielomian <span class="math_marks">Q(x)</span>, że: <span class="math_marks">W(x)=P(x)&bull;Q(x).</br></span> Wówczas wielomian <span class="math_marks">Q(x) </span>nazywamy ilorazem wielomianu <span class="math_marks">W(x)</span> przez <span class="math_marks">P(x)</span>. </br>Wielomian <span class="math_marks">P(x)</span> jest dzielnikiem wielomianu <span class="math_marks">W(x)</span>. </p>
 </div>
 
 <div class="colored-line-left margin-top yellow">
@@ -670,8 +679,8 @@ Z twierdzenia o podzielności wielomianów wiemy, że aby wielomian P(x) był po
 <hr class="yellow margin-top">
 <div class="definition_bg">
     <div class="definition_text">
-        <h3 class="green-text"></br>Twierdzenie Bézouta</h3>
-    <p>Liczba <span class="math_marks">a</span> jest <span class="trigger mark" data-container="body" data-toggle="popover" data-html="true" data-placement="bottom" data-content="Pierwiastek wielomianu - miejsce zerowe wielomianu, czyli liczba, dla której wartość wielomianu wynosi 0." title="Pierwiastek wielomianu">pierwiastkiem wielomianu</span> <span class="math_marks">W(x)</span> wtedy i tylko wtedy, gdy wielomian <span class="math_marks">W(x)</span> jest podzielny przez dwumian <span class="math_marks">x - a.</span></br>Z twierdzenia wynika również, że reszta z dzielenia wielomianu <span class="math_marks">W(x)</span> przez dwumian <span class="math_marks">(x-a)</span> jest równa <span class="math_marks">W(a)</span> czyli wartości wielomianu dla <span class="math_marks">x=a.</span>
+        <h3 class="green-text"></br>Twierdzenie Bézoute'a</h3>
+    <p>Liczba <span class="math_marks">a</span> jest pierwiastkiem wielomianu <span class="math_marks">W(x)</span> wtedy i tylko wtedy, gdy wielomian <span class="math_marks">W(x)</span> jest podzielny przez dwumian <span class="math_marks">x - a.</span></br>Z twierdzenia wynika również, że reszta z dzielenia wielomianu <span class="math_marks">W(x)</span> przez dwumian <span class="math_marks">(x-a)</span> jest równa <span class="math_marks">W(a),</span> czyli wartości wielomianu dla <span class="math_marks">x=a.</span>
 </p>
 </div>
 </div>
@@ -785,7 +794,7 @@ Widzimy więc, że wielomian <span class="math_marks">W(x)</span> jest podzielny
     <div class="container">
         <div class="col-md-12 left-align wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">
             <h3 class="white-text">Tabelka do obliczania wartości wielomianu</h3>
-            <p class="def">Najczęściej jednak do obliczania wartości wielomianu o argumencie x=t używa się zapisu w tabelce, dzięki której obliczymy wartość wielomianu o wiele szybciej. Podobną tabelkę stosuje się przy dzieleniu wielomianu przez dwumian. </br></br>
+            <p class="def">Najczęściej jednak do obliczania wartości wielomianu o argumencie x=t używa się zapisu w tabelce, dzięki której obliczymy wartość wielomianu o wiele szybciej. </br></br>
 
     Poniższa tabelka przedstawia jak uzupełnia się pola dla wielomianu W<sub>n</sub>(x) i argumencie x=t (zapis ogólny).</p>
 
@@ -820,13 +829,13 @@ Widzimy więc, że wielomian <span class="math_marks">W(x)</span> jest podzielny
 </table>
 <!-- /END TABLE -->
 <p>liczby a<sub>n</sub>,a<sub>n-1</sub>,........,a<sub>0</sub> - współczynniki wielomianu</br>
-współczynnikiem a<sub>n</sub>  nazywamy wyraz przy najwyższej potędze wielomianu</br>
+współczynnikiem a<sub>n</sub>  nazywamy wyraz przy najwyższej potędze zmiennej wielomianu</br>
 n - stopień wielomianu.</br>b<sub>0</sub> jest wartością wielomianu dla argumentu t (wynik) </p>
 <div class="colored-line-left margin-top">
 </div>
 
 <ul class="def" style="list-style-type:disc">
-    Jak ułożyć tabelkę?
+    Jak ułożyć tabelkę? Podobnie, jak w przypadku dzielenia wielomianu przez dwumian:
     <li>    W górnym wierszu wstawiamy kolejne współczynniki wielomianu zaczynając od tego przy najwyższej potędze.</li>
     <li>    W pierwszej komórce, w dolnym wierszu wstawiamy wartość podanego argumentu t.</li>
     <li>    W drugiej komórce, w dolnym wierszu przepisujemy wartość współczynnika przy najwyższej potędze (przepisujemy liczbę z góry).</li>
@@ -891,13 +900,13 @@ Jak widać wynik wyszedł taki sam jak poprzednio.
             <p>Lista kroków:</p>
             <ul style="list-style-type:disc">
                 <li>
-                    1. Korzystając z twierdzenia o pierwiastkach wymiernych szukamy jego pierwiastka, np. x<sub>0</sub>.
+                    1. Korzystając z twierdzenia o pierwiastkach wymiernych szukamy jego pierwiastka, np. <span class="math_marks">x<sub>0</sub>.</span>
                 </li>
                 <li>
-                    2. W oparciu o twierdzenie Bézoute'a dzielimy wielomian przez dwumian (x-x<sub>0</sub>) posługując się schematem Hornera.
+                    2. W oparciu o twierdzenie Bézoute'a dzielimy wielomian przez dwumian <span class="math_marks">(x-x<sub>0</sub>)</span> posługując się schematem Hornera.
                 </li>
-                <li>3. Przedstawiamy wielomian w postaci iloczynowej <span class="math_marks">W(x)=Q(x)&bull;(x-x<sub>0</sub></span> </li>
-                <li>4. Postępując według punktu 1 sprawdzamy, czy wielomian Q(x) ma pierwiastki. Jeśli tak, postępujemy jak w 3 kroku.</li>
+                <li>3. Przedstawiamy wielomian w postaci iloczynowej <span class="math_marks">W(x)=Q(x)&bull;(x-x<sub>0</sub>)</span> </li>
+                <li>4. Postępując według punktu 1 sprawdzamy, czy wielomian <span class="math_marks">Q(x)</span> ma pierwiastki. Jeśli tak, postępujemy dalej jak w 2 kroku.</li>
             </ul>
         </div>
     </div>
@@ -918,9 +927,10 @@ Jak widać wynik wyszedł taki sam jak poprzednio.
                 <p>Lista kroków:</p>
                 <ul style="list-style-type:disc">
                     <li>
-                        1.Rozkładamy wielomian na czynniki.
+                        1.Sprowadzamy równanie do postaci <span class="math_marks">W(x)=0</span>, gdzie <span class="math_marks">W(x)</span>-wielomian.
                     </li>
-                    <li>2.Wypisujemy wszystkie pierwiastki i podajemy odpowiedź.</li>
+                    <li>2.Rozkładamy lewą stronę wielomianu na czynniki.</li>
+                    <li>3.Znajdujemy miejsca zerowe każdego z czynników.</li>
 
                 </ul>
                 <div class="colored-line-left margin-top">
@@ -977,10 +987,10 @@ Wynik z dzielenia:</br>
 </br>
 Zatem otrzymujemy równanie: </br>
 <span class="math_marks">(x−1)(x<sup>2</sup>+x−2)=0</span>
-</br>Jak już wcześniej obliczyliśmy, x<sub>1</sub>=-1, teraz pozostaje nam obliczyć drugą część iloczynu (równanie kwadratowe).Liczymy za pomocą delty pozostałe rozwiązania.
+</br>Jak już wcześniej obliczyliśmy, x<sub>1</sub>=-1, teraz pozostaje nam rozwiązać równanie kwadratowe: <span class="math_marks">x<sup>2</sup>+x−2=0</span>.
 </br>
 Δ=9, √Δ=3 </br>
-x<sub>2</sub>=-2 x<sub>3</sub>=-2</br>
+x<sub>2</sub>=-2 x<sub>3</sub>=1</br>
 I mamy wynik! Pierwiastkami wielomianu <span class="math_marks">x<sup>3</sup>−3x+2=0</span> są:
 </br><span class="math_marks yellow">x<sub>1</sub>=1(dwukrotny),  x<sub>2</sub>=-2.</span>
 </br>
@@ -1004,18 +1014,30 @@ INEQUATIONS SECTION
                 <li>
                     1. Wyznaczamy pierwiastki wielomianu korzystając z opisu na rozkład wielomianu na czynniki.
                 </li>
-                <li>2. Rysujemy przybliżony wykres tego wielomianu:                                                                    </br>   - Określamy znak współczynnika przy najwyższej potędze zmiennej. Jeżeli jest dodatni, to zaczynamy rysować od góry, z prawej strony, jeżeli ujemny, to z prawej strony od dołu,
-            </br>   - Przy pierwiastkach parzystokrotnych (np. dwukrotnym, odbijamy wykres).
+                <li>2. Rysujemy przybliżony wykres tego wielomianu:                                                                    </br>   - Określamy znak współczynnika <span class="math_marks">a<sub>n</sub></span> funkcji wielomianowej przy najwyższej potędze zmiennej. </br> a) Jeżeli jest dodatni <span class="math_marks">(a<sub>n</sub>>0)</span>, to szkic zaczynamy rysować od góry, z prawej stronytak, aby przechodził przez wszystkie kolejne miejsca zerowe.</br>b) Jeżeli ujemny <span class="math_marks">(a<sub>n</sub><0)</span>, to z prawej strony od dołu tak, aby przechodził przez wszystkie kolejne miejsca zerowe.
+            </br>   - Przy pierwiastkach parzystokrotnych np. dwukrotnym (odbijamy wykres względem osi (wykres nie przechodzi na drugą stronę osi)).
         </li>
-    <li>3. Na podstawie szkicu wykresu wielomianu W(x) odczytujemy przedziały spełniające nierówność i podajemy odpowiedź.
+        <li>3. Na podstawie szkicu wykresu wielomianu <span class="math_marks">W(x)</span> odczytujemy przedziały spełniające nierówność i podajemy odpowiedź.
     </li>
+<div class="main_block">
+     <div class="inner_block">
+
+    a)
+        <img src="images/drawing_example1.svg">
+    </div>
+     <div class="inner_block">
+
+ b)
+        <img src="images/drawing_example2.svg">
+    </div>
+</div>
     </ul>
 <div class="colored-line-left margin-top">
 </div>
 <h3 class="white-text"></br>Przykładowe zadanie</h3>
 <p>ZADANIE</br>
 Rozwiąż nierówność:</br>
-<span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4>0</span>
+<span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4&ge;0</span>
 </br></br>
 </br>Oznaczmy wielomian jako: <span class="math_marks">W(x)=x<sup>3</sup>+5x<sup>2</sup>+8x+4</span></br>
 wyraz wolny: 4, podzielniki wyrazu wolnego {1, -1, 2, −2, 4, -4}
@@ -1025,8 +1047,8 @@ wyraz wolny: 4, podzielniki wyrazu wolnego {1, -1, 2, −2, 4, -4}
 <span class="math_marks yellow">W(-1)=(-1)<sup>3</sup>+5&bull;(-1)<sup>2</sup>+8&bull;(-1)+4=-1+5-8+4=-9+9=0</span> (Nie musimy dalej sprawdzać, ponieważ W(-1)=0, czyli x=-1 jest pierwiastkiem.)
 
 </br></br>
-Zatem aby rozwiązać nierówność musimy podzielić <span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4</span> przez dwumian <span class="math_marks">(x+1)</span>
-</br>Aby to zrobić ponownie tworzymy tabelkę. Tym razem jako argument bierzemy <span class="math_marks">-1.</span>
+Zatem aby znaleźć pozostałe pierwiastki wielomianu musimy podzielić wielomian <span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4</span> przez dwumian <span class="math_marks">(x+1)</span>
+</br>(korzystamy ze schematu Hornera).
 </br>
 <table class="overall_record">
     <tr class="up">
@@ -1050,27 +1072,28 @@ Wynik z dzielenia:</br>
 <span class="math_marks">x<sup>2</sup>+4x+4</span></br> (schemat Hornera obniża stopień o 1)
 </br>
 Zatem otrzymujemy nierówność: </br>
-<span class="math_marks">(x+1)(x<sup>2</sup>+4x+4)>0</span>
-</br>Jak już wcześniej obliczyliśmy, x<sub>1</sub>=1, teraz pozostaje nam obliczyć drugą część iloczyny (równanie kwadratowe).Liczymy za pomocą delty pozostałe rozwiązania.
+<span class="math_marks">(x+1)(x<sup>2</sup>+4x+4)&ge;0</span>
+</br>Jak już wcześniej obliczyliśmy, x<sub>1</sub>=1, teraz pozostaje nam obliczyć równanie kwadratowe: <span class="math_marks">x<sup>2</sup>+4x+4=0</span>.
 </br>
-Δ=0, 1 rozwiązanie z delty </br>
+Δ=0, => 1 rozwiązanie z delty </br>
 x<sub>2</sub>=-2 (dwukrotny)</br>
+<span class="math_marks">(x+1)(x+2)<sup>2</sup>&ge;0</span></br>
 Pierwiastkami wielomianu  <span class="math_marks">W(x)=x<sup>3</sup>+5x<sup>2</sup>+8x+4</span> są:
 </br><span class="math_marks yellow">x<sub>1</sub>=-1,  x<sub>2</sub>=-2(dwukrotny).</span></br></br>
 Zaznaczamy pierwiastki na osi.</br>
-<img src="images/division_images/inequations/axis.svg"></br>
+<img src="images/axis.svg"></br>
 Określamy znak współczynnika kierunkowego:</br>
 a=1 => a>0
 </br>
 Rysujemy wykres.</br>
-<img src="images/division_images/inequations/axis_graph.svg">
+<img src="images/axis_graph.svg">
 </br>
 Zaznaczamy przedziały spełniające nierówność: </br>
-<span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4>0</span></br>
-<img src="images/division_images/inequations/axis_graph_result.svg">
+<span class="math_marks">x<sup>3</sup>+5x<sup>2</sup>+8x+4&ge;0</span></br>
+<img src="images/axis_graph_result.svg">
 </br>
 Pozostaje nam odczytać zaznaczony przedział i mamy wynik.</br>
-<span class="math_marks yellow">x<span class="belong">&isin;</span>(-1, +&infin;)</span>
+<span class="math_marks yellow">x<span class="belong">&isin;</span>{-2}<span class="belong">&cup;</span><-1, +&infin;)</span>
 
 
 </p>
