--- a/kalkulator.html
+++ b/kalkulator.html
@@ -131,7 +131,7 @@ HEADER
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="index.html">
-                                <img src="images/logo2.svg" alt="Strona główna">
+                                <img src="images/logo2.png" alt="Strona główna">
                             </a>
                         </div>
 
@@ -146,7 +146,7 @@ HEADER
                             </li>
                             <li><a href="#zmien_system">zmiana systemu liczby</a>
                             </li>
-                            <li><a href="game.html">zagraj</a>
+                            <li><a href="info.html">o stronie</a>
                             </li>
 
 
@@ -164,7 +164,7 @@ HEADER
                 <div class="only-logo">
                     <div class="navbar">
                         <div class="navbar-header">
-                            <img src="images/logo.svg" class="logo" alt="logo">
+                            <img src="images/logo.png" class="logo" alt="logo">
                         </div>
                     </div>
                 </div>
